# simple-game

./: CMakeLists.txt  README
src/: brick.cpp  brick.h  common.h  draggableobject.cpp  draggableobject.h  gameengine.cpp  gameengine.h  gameobject.cpp  gameobject.h  gameplay.cpp  gameplay.h  main.cpp  mousecontroller.cpp  mousecontroller.h  visualobject.cpp  visualobject.h
